# SortSmart

./: AppConfig.py  LoggingUtil.py  README.md  main.py  main_app.py  pyproject.toml  scanner.py
sortsmart/: llm_service.py  pyproject.toml
sortsmart/data/: markham-summary.txt  peel-summary.txt  richmondhill-summary.txt  toronto-summary.txt  vaughan-summary.txt  york-summary.txt
static/: index.html
